Time periods get aligned to candles, but there are still some serious bugs

--- a/src/app/trading-view/trading-view.component.css
+++ b/src/app/trading-view/trading-view.component.css
@@ -49,8 +49,12 @@
     width: 1em;
 }
 
+.JapaneseCandle.key {
+    background-color: green;
+}
+
 .CandlesViewPort {
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
     height: 100%;
     cursor: crosshair;
@@ -99,7 +103,7 @@
 
 .timeLabels {
     position: relative;
-    /* overflow: hidden; */
+    overflow: hidden;
     height: 1em;
 }
 
@@ -132,8 +136,31 @@
     opacity: 0;
 }
 
+.visiblePeriod.atLabel {
+    height: 10px;
+    top: -8px;
+}
+
+.visiblePeriod {
+    position: absolute;
+    height: 5px;
+    top: -2px;
+    width: 1px;
+    background-color: black;
+}
+
+.notDisplayed {
+    display: none;
+}
+
 .debugPane {
-    float: left;
+    pointer-events: none;
+    position: absolute;
+    z-index: 1000;
+}
+
+.debugPane button {
+    pointer-events: all;
 }
 
 .isScrolling {
